--- a/index.html
+++ b/index.html
@@ -1086,7 +1086,7 @@ alert("Free iPA Hack by iOS Ware \n Здесь может быть Ваша ре
                     </template>
                     
                     <template #title>
-                    <van-button type="primary" color="lime" width = "100" @click="changeTab('Roblox')" onclick="jumpQQ" size="mini" plain>Skins</van-button>
+                    <van-button type="primary" color="lime" width = "100" @click="changeTab('Skin')" onclick="jumpQQ" size="mini" plain>Roblox🤯</van-button>
                     <van-button type="primary" color="lime" @click="changeTab('Other')" size="mini"plain>Other</van-button>
   <div id="popup_loadscripts" class="popup_view3">
                     </template>
