--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>H5AlertView</title>
+<title>iOS Ware</title>
 <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no" />
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <style type="text/css">
@@ -178,15 +178,9 @@ string2array(text);
 divserzeugen();
 //document.write(text);
 </script></b></span></div>
-<div id="info-text">Sub ours tg channel:<a href="http://t.me/ipaware" >@ipawarwe</a></div>
+<div id="info-text">Sub ours tg channel:<a href="http://t.me/ipaware" >@ipaware</a></div>
 <div class="scrollbar" style="max-height:220px">
- 
-<a type="checkbox" id="1" onclick="checkboxclick(this)" ><button>HighJump</button></a>
-<a href="https://t.me/dvcipafree" ><button>AirWalk</button></a>
-<a href="https://t.me/dvcipaios" ><button>xD</button></a>
-<a href="https://t.me/dvcipafree" ><button>AirBreak</button></a>
-<a href="https://t.me/dvcipaios" ><button>Watafak (v2)</button></a>
-<a href="https://t.me/dvcipafree" ><button>Our Channel<3></button></a>
+<a id="1" onclick="checkboxclick(this)" ><button>HighJump⏫️</button></a>
 </div>
 </div>
 </div>
