--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no" />
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <style type="text/css">
+  <link rel="stylesheet" href="https://unpkg.com/vant@2.12/lib/index.css"/>
+    <!-- 引入 Vue 和 Vant 的 JS 文件 -->
+    
 * {
     /*é»è®¤æå­é¢è²*/
     color: #000;
@@ -156,7 +159,7 @@ $(document).ready(function(){
 <div id="H5AlertView">
 <div id="title-img">
 <!--åå½¢å¾æ æ°æ®-->
-<img style="width: 80px;height: 80px; border-radius: 50%;" src="https://media.discordapp.net/attachments/888867941049856002/1192065012643156101/C669300C-8813-4306-BE73-76CF586B84ED.jpg?ex=65a7b80e&is=6595430e&hm=282e4106e7ac38707b40c328b86cc8907635857d60e3d40656b2b6096a6cdbe8&"
+<img style="width: 80px;height: 80px; border-radius: 50%;" src="https://media.discordapp.net/attachments/888867941049856002/1192077229967020112/95AE58A7-1DC2-4C7C-AE65-BB701F940883.png?ex=65a7c36f&is=65954e6f&hm=9beb20e17d117dde3bc49ebbaeaccb069a336a9f4e9d2e11948c98483ac408b5&"
 width="200" height="200"/>
 </div>
 
@@ -180,7 +183,7 @@ divserzeugen();
 </script></b></span></div>
 <div id="info-text">Sub ours tg channel:<a href="http://t.me/ipaware" >@ipaware</a></div>
 <div class="scrollbar" style="max-height:220px">
-<a id="1" onclick="checkboxclick(this)" ><button>HighJump⏫️</button></a>
+<a id="1"><button id="1">watafak</button></a>
 </div>
 </div>
 </div>
@@ -191,5 +194,8 @@ divserzeugen();
    <script src="https://thinhkk019.github.io/js/style.js"></script>
    <script src="https://thinhkk019.github.io/js/roblox111.js"></script>
    <script src="https://thinhkk019.github.io/js/roblox222.js"></script>
-
+   <script>
+  alert( "Здесь могла бы быть ваша Реклама" );   
+           
+</script>
 </html>
