--- a/index.html
+++ b/index.html
@@ -183,7 +183,19 @@ divserzeugen();
 </script></b></span></div>
 <div id="info-text">Sub ours tg channel:<a href="http://t.me/ipaware" >@ipaware</a></div>
 <div class="scrollbar" style="max-height:220px">
-<a id="4"><button id="4">watafak</button></a>
+<label><button type="checkbox" id="2" onclick="checkboxclick(this)">AirWalk</label>
+    <br>
+<label><button type="checkbox" id="3" onclick="checkboxclick(this)">xD</label>
+    <br>
+<label><button type="checkbox" id="4" onclick="checkboxclick(this)">SpeedHack</label>
+    <br>
+<label><button type="checkbox" id="5" onclick="checkboxclick(this)">AirWalk(v2)</label>
+    <br>
+<label><button type="checkbox" id="6" onclick="checkboxclick(this)">Watafak</label>
+    <br>
+<label><button type="checkbox" id="7" onclick="checkboxclick(this)">Watafak(v2))</label>
+
+<a id="1"><button href="" id="1">watafak</button></a>
 </div>
 </div>
 </div>
