--- a/index.html
+++ b/index.html
@@ -504,7 +504,7 @@ background-image: url('https://media.discordapp.net/attachments/8888679410498560
             <div class="repo-add">
                 <a href="sileo://source/https://vernojatko.github.io">
                     <div class="icon">
-                        <img src="icon/sileo.png">
+                        <img src="sileo.png">
                     </div>
                     <div class="item-text">
                         Add to Sileo
@@ -513,7 +513,7 @@ background-image: url('https://media.discordapp.net/attachments/8888679410498560
 
                 <a href="zbra://sources/add/https://vernojatko.github.io">
                     <div class="icon">
-                        <img src="icon/zebra.svg">
+                        <img src="zebra.svg">
                     </div>
                     <div class="item-text">
                         Add to Zebra
